--- a/sfg-pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic-data/pom.xml
@@ -27,7 +27,7 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql/groupId>
+			<groupId>mysql/groupId</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
