Solved Problem with repackage and refactored module

--- a/sfg-pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic-data/pom.xml
@@ -12,8 +12,8 @@
 	<artifactId>sfg-pet-clinic-data</artifactId>
 
 	<properties>
-		<java.version>11</java.version>
-	</properties>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+    </properties>
 
 	<dependencies>
 		<dependency>
